translated dialysis hub

--- a/es/hub/dialysis/index.html
+++ b/es/hub/dialysis/index.html
@@ -1,90 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
   <div data-include="/includes_es/meta.html"></div>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dialysis Overview</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Centro de diálisis — Resumen | Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
-  <body>
-    <div data-include="/includes_es/header.html"></div>
-    <main class="content" id="main">
-<div data-include="/includes_es/dialysis-subnav.html"></div>
-<h1>Dialysis Hub</h1>
-<p>
-  Dialysis replaces some of the work of your kidneys when they can’t keep up.
-  This section focuses on in-center hemodialysis: what to expect, who you’ll meet, and
-  simple routines that make treatments easier.
-</p>
+<body>
+  <div data-include="/includes_es/header.html"></div>
+  <main class="content" id="main">
+    <div data-include="/includes_es/dialysis-subnav.html"></div>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/dialysis/staff/index.html" data-evt="dialysis:index:staff">Clinic Staff Roles</a></h2>
-  <p>
-    Meet the team you’ll see most—nurses, techs, social worker, dietitian, and nephrologist—
-    and what each person handles.
-  </p>
-</section>
+    <h1>Centro de diálisis</h1>
+    <p>
+      La diálisis reemplaza parte del trabajo de tus riñones cuando ya no pueden con todo.
+      Esta sección se centra en la hemodiálisis en clínica: qué esperar, a quién conocerás
+      y rutinas sencillas que hacen las sesiones más fáciles.
+    </p>
 
-<section class="testimonial-summary">
-  <h2><a href="access.html" data-evt="dialysis:index:access">Access Options: Catheter, Fistula, Graft</a></h2>
-  <p>
-    How dialysis connects to your bloodstream, healing timelines, daily care, and when to call for help.
-  </p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/dialysis/staff/index.html" data-evt="dialysis:index:staff">Funciones del personal de la clínica</a></h2>
+      <p>
+        Conoce al equipo que verás con más frecuencia—enfermería, técnicos, trabajador/a social,
+        dietista y nefrólogo/a—y qué hace cada persona.
+      </p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="machine.html" data-evt="dialysis:index:machine">The Dialysis Machine</a></h2>
-  <p>
-    A plain-English tour: blood circuit, dialyzer, ultrafiltration, common alarms, and what the screen numbers mean.
-  </p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="access.html" data-evt="dialysis:index:access">Opciones de acceso: catéter, fístula, injerto</a></h2>
+      <p>
+        Cómo se conecta la diálisis a tu torrente sanguíneo, tiempos de cicatrización, cuidados diarios
+        y cuándo llamar por ayuda.
+      </p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="expectations.html" data-evt="dialysis:index:expectations">What to Expect</a></h2>
-  <p>
-    First-month rhythm, chair comfort tips, dry-weight goals, and how the visit flows from check-in to wrap-up.
-  </p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="machine.html" data-evt="dialysis:index:machine">La máquina de diálisis</a></h2>
+      <p>
+        Un recorrido en lenguaje claro: circuito de sangre, dializador, ultrafiltración, alarmas comunes
+        y qué significan los números en la pantalla.
+      </p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="schedule.html" data-evt="dialysis:index:schedule">Schedule & Planning</a></h2>
-  <p>
-    Common shift patterns, picking a time that fits work and rides, travel planning, and weather back-ups.
-  </p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="expectations.html" data-evt="dialysis:index:expectations">Qué esperar</a></h2>
+      <p>
+        Ritmo del primer mes, consejos para estar cómodo/a en la silla, metas de peso seco y cómo fluye
+        la visita desde el ingreso hasta la salida.
+      </p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="side-effects.html" data-evt="dialysis:index:side-effects">Side Effects & Safety</a></h2>
-  <p>
-    Cramps, low BP, “dialysis hangover,” needles/access issues, simple fixes, and clear “when to call” rules.
-  </p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="schedule.html" data-evt="dialysis:index:schedule">Horarios y planificación</a></h2>
+      <p>
+        Turnos más comunes, elegir un horario que encaje con trabajo y transporte, planificación de viajes
+        y planes de respaldo por clima.
+      </p>
+    </section>
 
-<section class="callout">
-  <p>
-    You don’t need to learn it all at once. Start with the page you need today, jot questions,
-    and bring them to your next session—small tweaks make a big difference.
-  </p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="side-effects.html" data-evt="dialysis:index:side-effects">Efectos secundarios y seguridad</a></h2>
+      <p>
+        Calambres, PA baja, “resaca de diálisis”, problemas con agujas/acceso, soluciones simples
+        y reglas claras de “cuándo llamar”.
+      </p>
+    </section>
 
-    </main>
-    <div data-include="/includes_es/footer.html"></div>
+    <section class="callout">
+      <p>
+        No tienes que aprenderlo todo de una vez. Empieza por la página que necesitas hoy, anota tus preguntas
+        y llévalas a tu próxima sesión—pequeños ajustes hacen una gran diferencia.
+      </p>
+    </section>
+  </main>
+  <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
