--- a/es/hub/dialysis/machine.html
+++ b/es/hub/dialysis/machine.html
@@ -1,101 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
   <div data-include="/includes_es/meta.html"></div>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dialysis Access Options</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>La máquina de diálisis: cómo funciona — Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
-  <body>
-    <div data-include="/includes_es/header.html"></div>
-    <main class="content" id="main">
-<div data-include="/includes_es/dialysis-subnav.html"></div>
-<h1>Dialysis Machine: How It Works</h1>
-<p>
-  The dialysis machine moves your blood through a filter (<em>dialyzer</em>) and returns it cleaned.
-  It also pulls extra fluid (ultrafiltration) at a controlled rate. Staff program the settings; your job is to report how you feel.
-</p>
+<body>
+  <div data-include="/includes_es/header.html"></div>
+  <main class="content" id="main">
+    <div data-include="/includes_es/dialysis-subnav.html"></div>
 
-<h2>Quick tour of the system</h2>
-<ul>
-  <li><strong>Blood circuit:</strong> blood leaves your access through an <em>arterial</em> line, passes a pump and heparin line, flows through the dialyzer, then returns via a <em>venous</em> line.</li>
-  <li><strong>Dialyzer (“artificial kidney”):</strong> a bundle of tiny fibers. Waste and water cross the fiber walls into dialysate; blood cells and proteins stay in.</li>
-  <li><strong>Dialysate circuit:</strong> water + concentrates (acid and bicarbonate) mixed by the machine; temperature and <em>conductivity</em> are monitored for safety.</li>
-  <li><strong>Ultrafiltration (UF):</strong> the machine sets how much fluid to remove in total and per hour.</li>
-  <li><strong>Monitors & safety:</strong> venous/arterial pressure, air detector and clamp, blood-leak sensor, temperature, conductivity, and transmembrane pressure (TMP).</li>
-</ul>
+    <h1>La máquina de diálisis: cómo funciona</h1>
+    <p>
+      La máquina mueve tu sangre a través de un filtro (<em>dializador</em>) y la devuelve limpia.
+      También extrae líquido extra (ultrafiltración) a un ritmo controlado. El personal programa los
+      ajustes; tu papel es avisar cómo te sientes.
+    </p>
 
-<h2>What you’ll see on the screen</h2>
-<ul>
-  <li><strong>BFR (blood-flow rate):</strong> how fast blood moves through the circuit (mL/min).</li>
-  <li><strong>Venous / Arterial pressures:</strong> reflect needle position, needle size, and line/kink issues.</li>
-  <li><strong>UF goal & rate:</strong> total fluid to remove and how fast it’s coming off.</li>
-  <li><strong>TMP:</strong> pressure across the dialyzer; rising numbers can signal clotting or high resistance.</li>
-  <li><strong>Temp & conductivity:</strong> dialysate temperature and mix; the machine alarms if out of range.</li>
-</ul>
+    <h2>Recorrido rápido del sistema</h2>
+    <ul>
+      <li><strong>Circuito de sangre:</strong> la sangre sale de tu acceso por la línea <em>arterial</em>, pasa por una bomba y la línea de heparina, atraviesa el dializador y regresa por la línea <em>venosa</em>.</li>
+      <li><strong>Dializador (“riñón artificial”):</strong> un haz de microfibras. Los desechos y el agua cruzan las paredes hacia el dializado; las células y proteínas se quedan en la sangre.</li>
+      <li><strong>Circuito de dializado:</strong> agua + concentrados (ácido y bicarbonato) mezclados por la máquina; se monitorizan la temperatura y la <em>conductividad</em> por seguridad.</li>
+      <li><strong>Ultrafiltración (UF):</strong> la máquina fija cuánto líquido quitar en total y por hora.</li>
+      <li><strong>Monitoreo y seguridad:</strong> presiones venosa/arterial, detector de aire y pinza venosa, sensor de fuga de sangre, temperatura, conductividad y presión transmembrana (PTM/TMP).</li>
+    </ul>
 
-<h2>Common alarms (what they mean)</h2>
-<ul>
-  <li><strong>Venous pressure high/low:</strong> kinked line, needle issue, or patient position. <em>Stay still and call staff.</em></li>
-  <li><strong>Arterial pressure high/low:</strong> needle angle, access position, or excessive suction. <em>Call staff before moving.</em></li>
-  <li><strong>Air detector / venous clamp:</strong> safety triggered; machine stops blood pump and clamps line. <em>Don’t panic—wait for staff.</em></li>
-  <li><strong>Blood-leak detector:</strong> possible dialyzer membrane issue; staff will test the effluent and likely change the circuit.</li>
-  <li><strong>Conductivity/temperature:</strong> dialysate mix or heat out of range; staff pause and correct.</li>
-  <li><strong>TMP high:</strong> dialyzer resistance climbing—may need rinse, slower BFR, or circuit change.</li>
-</ul>
+    <h2>Lo que verás en la pantalla</h2>
+    <ul>
+      <li><strong>BFR (tasa de flujo sanguíneo):</strong> qué tan rápido circula la sangre por el circuito (mL/min).</li>
+      <li><strong>Presión venosa / arterial:</strong> reflejan posición/tamaño de agujas y posibles acodamientos en líneas.</li>
+      <li><strong>Meta y tasa de UF:</strong> líquido total a retirar y a qué velocidad se retira.</li>
+      <li><strong>PTM/TMP:</strong> presión a través del dializador; si sube puede indicar coagulación o alta resistencia.</li>
+      <li><strong>Temperatura y conductividad:</strong> del dializado; la máquina alarma si están fuera de rango.</li>
+    </ul>
 
-<h2>Water treatment (behind the scenes)</h2>
-<p>
-  The center’s water system (reverse osmosis, carbon tanks, filters) prepares ultra-pure water for dialysate.
-  Machines won’t run if tests fail—this is why start times can occasionally be delayed.
-</p>
+    <h2>Alarmas comunes (qué significan)</h2>
+    <ul>
+      <li><strong>Presión venosa alta/baja:</strong> línea acodada, problema con aguja o postura. <em>Mantente quieto/a y llama al personal.</em></li>
+      <li><strong>Presión arterial alta/baja:</strong> ángulo de aguja, posición del acceso o succión excesiva. <em>Avisa antes de moverte.</em></li>
+      <li><strong>Detector de aire / pinza venosa:</strong> seguridad activada; la máquina detiene la bomba y pinza la línea. <em>No te alarmes—espera al personal.</em></li>
+      <li><strong>Detector de fuga de sangre:</strong> posible problema en la membrana del dializador; el personal prueba el efluente y suele cambiar el circuito.</li>
+      <li><strong>Conductividad/temperatura:</strong> mezcla o calor del dializado fuera de rango; el personal pausará y corregirá.</li>
+      <li><strong>PTM alta:</strong> crece la resistencia del dializador—puede requerir enjuague, bajar BFR o cambiar circuito.</li>
+    </ul>
 
-<h2>Safety basics</h2>
-<ul>
-  <li>Confirm your <strong>name/DOB</strong>, prescription, and access arm each run.</li>
-  <li>Keep the access arm still and visible; avoid leaning on needles or lines.</li>
-  <li>Tell staff fast: <strong>pain at the needle</strong>, swelling, numb fingers, dizziness, chest pressure, cramps, chills, or new cough.</li>
-  <li>Hold <strong>steady pressure</strong> after needles come out; don’t peek. Report bleeding that won’t stop.</li>
-</ul>
+    <h2>Tratamiento de agua (tras bambalinas)</h2>
+    <p>
+      El sistema de agua del centro (ósmosis inversa, tanques de carbón, filtros) prepara agua ultrapura para el dializado.
+      Las máquinas no inician si los controles fallan—por eso, a veces, los comienzos se demoran.
+    </p>
 
-<h2>Comfort & practical tips</h2>
-<ul>
-  <li>Wear sleeves that roll up; bring layers—rooms can be cool.</li>
-  <li>Gentle ankle/calf movements reduce cramps (ask what’s OK for your access).</li>
-  <li>Plan a quiet <strong>post-treatment window</strong> for a snack, hydration (per plan), and rest.</li>
-</ul>
+    <h2>Seguridad básica</h2>
+    <ul>
+      <li>Confirma tu <strong>nombre/fecha de nacimiento</strong>, prescripción y brazo de acceso en cada sesión.</li>
+      <li>Mantén el brazo del acceso quieto y visible; evita apoyar el peso sobre agujas o líneas.</li>
+      <li>Avisa de inmediato: <strong>dolor en la aguja</strong>, hinchazón, dedos entumecidos, mareo, presión en el pecho, calambres, escalofríos o tos nueva.</li>
+      <li>Aplica <strong>presión constante</strong> tras retirar las agujas; no “asomes” a mirar. Reporta sangrado que no cede.</li>
+    </ul>
 
-<h2>When to call between treatments</h2>
-<ul>
-  <li><strong>Call the clinic now:</strong> fever or chills, new redness/pus at access, swelling of the arm/hand, shortness of breath, chest pain, or loss of the fistula/graft <em>thrill</em>.</li>
-  <li><strong>ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, or you pass out.</li>
-</ul>
+    <h2>Comodidad y consejos prácticos</h2>
+    <ul>
+      <li>Usa mangas que se suban fácil; lleva capas—las salas pueden estar frescas.</li>
+      <li>Movimientos suaves de tobillos y pantorrillas reducen calambres (pregunta qué es adecuado para tu acceso).</li>
+      <li>Planifica una <strong>ventana postratamiento</strong> para snack, hidratación (según plan) y descanso.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Questions to ask:</strong> What are <em>my</em> usual pressure ranges? How do we adjust UF if I cramp or get dizzy?
-  What’s the plan if the machine alarms repeatedly on my access?</p>
-</div>
+    <h2>Cuándo llamar entre sesiones</h2>
+    <ul>
+      <li><strong>Llama al centro ahora:</strong> fiebre o escalofríos, enrojecimiento/pus nuevo en el acceso, hinchazón de brazo/mano, falta de aire, dolor en el pecho o pérdida del <em>frémito</em> en fístula/injerto.</li>
+      <li><strong>Urgencias/911:</strong> dificultad respiratoria grave, dolor torácico que no cede, confusión o desmayo.</li>
+    </ul>
 
-<p class="disclaimer">Educational only. Your dialysis team will tailor machine settings and safety steps to you.</p>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> ¿Cuáles son <em>mis</em> rangos habituales de presiones? ¿Cómo ajustamos la UF si tengo calambres o mareos?
+      ¿Cuál es el plan si la máquina alarma repetidamente por mi acceso?</p>
+    </div>
 
-    </main>
-    <div data-include="/includes_es/footer.html"></div>
+    <p class="disclaimer">Contenido educativo. Tu equipo de diálisis ajustará los parámetros y pasos de seguridad a tu situación.</p>
+  </main>
+  <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
