--- a/es/hub/dialysis/staff/clinic-administrator.html
+++ b/es/hub/dialysis/staff/clinic-administrator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Clinic Administrator</title>
-    <meta name="description" content="What the dialysis clinic administrator does, when to go to them, and what they don’t handle—operations, staffing, and clinic policies." />
+    <title>Administrador/a de la clínica — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la administrador/a de la clínica de diálisis, cuándo acudir a esta persona y qué no gestiona: operaciones, personal y políticas del centro." />
 
     <!-- Fonts & CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,10 +22,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/main.css" />
 
-    <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <!-- Include loader -->
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header -->
     <div data-include="/includes_es/header.html"></div>
@@ -33,51 +33,51 @@
     <main class="content" id="main">
       <!-- Dialysis subnav -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Clinic Administrator</h1>
+      <h1>Administrador/a de la clínica</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        The clinic administrator manages the overall operations of the dialysis center.
-        They ensure the facility meets safety, staffing, and regulatory requirements so
-        treatments run smoothly for all patients.
+        El/la administrador/a de la clínica gestiona las operaciones generales del centro de diálisis.
+        Se asegura de que la instalación cumpla con requisitos de seguridad, personal y normativas,
+        de modo que los tratamientos se realicen sin contratiempos para todos los pacientes.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Oversee staffing, scheduling, and daily operations.</li>
-        <li>Maintain compliance with state, federal, and company regulations.</li>
-        <li>Handle patient feedback and resolve ongoing service concerns.</li>
-        <li>Ensure the clinic has the necessary supplies and functioning equipment.</li>
+        <li>Supervisar el personal, los horarios y las operaciones diarias.</li>
+        <li>Mantener el cumplimiento de normativas estatales, federales y de la empresa.</li>
+        <li>Atender comentarios de pacientes y resolver problemas de servicio persistentes.</li>
+        <li>Asegurar que haya insumos suficientes y equipos en buen funcionamiento.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atienden</h2>
       <ul>
-        <li>Repeated or unresolved problems with scheduling, cleanliness, or equipment.</li>
-        <li>Concerns about staff conduct or professionalism.</li>
-        <li>Facility-wide issues, such as temperature, seating, or safety hazards.</li>
-        <li>Coordinating solutions to chronic operational problems.</li>
+        <li>Problemas repetidos o no resueltos con la programación, limpieza o equipos.</li>
+        <li>Preocupaciones sobre la conducta o profesionalismo del personal.</li>
+        <li>Asuntos a nivel del centro: temperatura, asientos o riesgos de seguridad.</li>
+        <li>Coordinación de soluciones para problemas operativos crónicos.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir a esta persona</h2>
       <ul>
-        <li>After you’ve spoken to a nurse or floor supervisor about a concern and it hasn’t been resolved.</li>
-        <li>For ongoing problems that affect your comfort or safety in the clinic.</li>
-        <li>If you need clarification on clinic policies or procedures.</li>
+        <li>Después de hablar con enfermería o con el/la supervisor/a de sala y no haberse resuelto el asunto.</li>
+        <li>Ante problemas continuos que afecten tu comodidad o seguridad en la clínica.</li>
+        <li>Si necesitas aclarar políticas o procedimientos del centro.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestionan (límites)</h2>
       <ul>
-        <li>Making medical decisions or changing your dialysis prescription.</li>
-        <li>Providing direct patient care during treatment.</li>
-        <li>Managing insurance or billing details — that goes to the financial coordinator.</li>
+        <li>Tomar decisiones médicas o cambiar tu prescripción de diálisis.</li>
+        <li>Brindar atención directa al paciente durante el tratamiento.</li>
+        <li>Gestionar seguros o facturación — eso corresponde al/la coordinador/a financiero/a.</li>
       </ul>
     </main>
 
     <!-- Footer -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
