--- a/es/hub/dialysis/staff/dietitian.html
+++ b/es/hub/dialysis/staff/dietitian.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dietitian</title>
-    <meta name="description" content="What the dialysis dietitian does, when to go to them, and what they do not handle. Nutrition support for dialysis patients." />
+    <title>Dietista — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la dietista en diálisis, cuándo acudir y qué no gestiona. Apoyo nutricional para pacientes en diálisis: líquidos, potasio, fósforo, sodio y proteínas." />
 
     <!-- Fonts & CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header -->
     <div data-include="/includes_es/header.html"></div>
@@ -33,52 +33,53 @@
     <main class="content" id="main">
       <!-- Dialysis subnav -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Dietitian</h1>
+      <h1>Dietista</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        The dialysis dietitian is a nutrition expert who helps you manage your diet to control fluid, potassium,
-        phosphorus, sodium, and protein levels. They work closely with your medical team to adjust your nutrition
-        plan based on your labs and treatment goals.
+        El/la dietista de diálisis es la persona experta en nutrición que te ayuda a
+        manejar la alimentación para controlar líquidos, potasio, fósforo, sodio y
+        proteínas. Trabaja de cerca con tu equipo médico para ajustar tu plan según
+        tus laboratorios y metas de tratamiento.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Review lab results and adjust your diet recommendations accordingly.</li>
-        <li>Teach you how to meet protein needs while controlling fluid and mineral intake.</li>
-        <li>Suggest food swaps to keep meals enjoyable while staying within restrictions.</li>
-        <li>Help prevent malnutrition and maintain a healthy weight during dialysis.</li>
+        <li>Revisar resultados de laboratorio y ajustar las recomendaciones de dieta.</li>
+        <li>Enseñarte a cubrir tus necesidades de proteína controlando líquidos y minerales.</li>
+        <li>Sugerir alternativas de alimentos para que sigas disfrutando tus comidas dentro de los límites.</li>
+        <li>Prevenir la desnutrición y mantener un peso saludable durante la diálisis.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atiende</h2>
       <ul>
-        <li>High or low potassium and phosphorus levels.</li>
-        <li>Low albumin or signs of malnutrition.</li>
-        <li>Difficulty managing thirst or fluid restriction.</li>
-        <li>Planning meals that fit medical restrictions, budget, and personal preferences.</li>
+        <li>Niveles altos o bajos de potasio y fósforo.</li>
+        <li>Albúmina baja o signos de desnutrición.</li>
+        <li>Dificultad para controlar la sed o la restricción de líquidos.</li>
+        <li>Planificación de comidas que respeten tus restricciones médicas, tu presupuesto y tus preferencias.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>If your labs show repeated issues with potassium, phosphorus, or albumin.</li>
-        <li>When you are struggling to stick to fluid or sodium limits.</li>
-        <li>If you lose or gain weight unexpectedly.</li>
-        <li>To discuss new foods, supplements, or changes in your eating habits.</li>
+        <li>Si tus laboratorios muestran problemas repetidos con potasio, fósforo o albúmina.</li>
+        <li>Cuando te cuesta cumplir los límites de líquidos o sodio.</li>
+        <li>Si bajas o subes de peso de forma inesperada.</li>
+        <li>Para hablar sobre alimentos nuevos, suplementos o cambios en tus hábitos de alimentación.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestiona (límites)</h2>
       <ul>
-        <li>Prescribing medications or supplements without doctor approval.</li>
-        <li>Changing your dialysis prescription.</li>
-        <li>Handling insurance coverage for food or supplements - that goes to the financial coordinator.</li>
+        <li>Prescribir medicamentos o suplementos sin aprobación del médico.</li>
+        <li>Cambiar tu prescripción de diálisis.</li>
+        <li>Tramitar coberturas de seguro para alimentos o suplementos — eso corresponde al/la coordinador/a financiero/a.</li>
       </ul>
     </main>
 
     <!-- Footer -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
