--- a/es/hub/dialysis/staff/financial-coordinator.html
+++ b/es/hub/dialysis/staff/financial-coordinator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Financial Coordinator</title>
-    <meta name="description" content="What the dialysis financial coordinator does, when to go to them, and what they don’t handle—insurance, assistance programs, and billing help." />
+    <title>Coordinador/a financiero/a — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la coordinador/a financiero/a en diálisis, cuándo acudir y qué no gestiona: seguros, programas de ayuda y facturación." />
 
     <!-- Fonts & CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header -->
     <div data-include="/includes_es/header.html"></div>
@@ -33,52 +33,52 @@
     <main class="content" id="main">
       <!-- Dialysis subnav -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Financial Coordinator</h1>
+      <h1>Coordinador/a financiero/a</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        The financial coordinator helps you navigate the costs of dialysis, including insurance coverage,
-        assistance programs, and billing questions. They work to reduce your out-of-pocket expenses and connect
-        you to available financial resources.
+        El/la coordinador/a financiero/a te ayuda a navegar los costos de la diálisis:
+        coberturas de seguro, programas de asistencia y dudas de facturación. Su objetivo
+        es reducir tus <em>gastos de bolsillo</em> y conectarte con recursos económicos disponibles.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Verify insurance coverage for dialysis treatments, lab work, and medications.</li>
-        <li>Explain Medicare, Medicaid, and private insurance benefits.</li>
-        <li>Assist with applications for financial aid programs and grants.</li>
-        <li>Resolve billing errors and coordinate payment plans if needed.</li>
+        <li>Verificar la cobertura del seguro para diálisis, análisis de laboratorio y medicamentos.</li>
+        <li>Explicar beneficios de Medicare, Medicaid y seguros privados.</li>
+        <li>Asistir con solicitudes a programas de ayuda financiera y subvenciones.</li>
+        <li>Resolver errores de facturación y coordinar planes de pago cuando sea necesario.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atiende</h2>
       <ul>
-        <li>Understanding your insurance benefits and what’s covered.</li>
-        <li>Questions about Medicare eligibility for dialysis patients.</li>
-        <li>Applying for medication assistance or copay help.</li>
-        <li>Addressing unexpected or incorrect bills from the clinic.</li>
+        <li>Comprender tus beneficios de seguro y qué está cubierto.</li>
+        <li>Preguntas sobre elegibilidad a Medicare para personas en diálisis.</li>
+        <li>Solicitud de ayuda para medicamentos o apoyo a copagos.</li>
+        <li>Atender facturas inesperadas o incorrectas provenientes de la clínica.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>If you receive a bill you don’t understand.</li>
-        <li>Before starting a new insurance plan to check dialysis coverage.</li>
-        <li>When you lose insurance or have a major change in your coverage.</li>
-        <li>If you need help applying for financial assistance programs.</li>
+        <li>Si recibes una factura que no entiendes.</li>
+        <li>Antes de iniciar un nuevo plan de seguro para verificar cobertura de diálisis.</li>
+        <li>Cuando pierdes el seguro o cambia de forma importante tu cobertura.</li>
+        <li>Si necesitas ayuda para solicitar programas de asistencia financiera.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestiona (límites)</h2>
       <ul>
-        <li>Changing your dialysis prescription or treatment schedule.</li>
-        <li>Approving medical procedures — that requires your nephrologist’s order.</li>
-        <li>Arranging transportation or non-financial services — that’s handled by the social worker or patient services coordinator.</li>
+        <li>Cambiar tu prescripción de diálisis o el horario de tratamiento.</li>
+        <li>Aprobar procedimientos médicos — eso requiere la orden de tu nefrólogo/a.</li>
+        <li>Organizar transporte u otros servicios no financieros — lo gestiona el/la trabajador/a social o el/la coordinador/a de servicios al paciente.</li>
       </ul>
     </main>
 
     <!-- Footer -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
