--- a/es/hub/dialysis/staff/floor-supervisor.html
+++ b/es/hub/dialysis/staff/floor-supervisor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Floor Supervisor / Charge Nurse</title>
-    <meta name="description" content="What the floor supervisor (charge nurse) does, when to go to them, and what they don’t handle—shift coordination, emergencies, and policy compliance." />
+    <title>Supervisor/a de piso / Enfermero/a a cargo — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la supervisor/a de piso (enfermero/a a cargo), cuándo acudir y qué no gestiona: coordinación de turnos, emergencias y cumplimiento de políticas." />
 
     <!-- Fonts & CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header -->
     <div data-include="/includes_es/header.html"></div>
@@ -33,51 +33,52 @@
     <main class="content" id="main">
       <!-- Dialysis subnav -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Floor Supervisor / Charge Nurse</h1>
+      <h1>Supervisor/a de piso / Enfermero/a a cargo</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        The floor supervisor, often called the charge nurse, oversees all patient care during a shift.
-        They coordinate staff assignments, handle emergencies, and ensure treatments follow clinic
-        policies and medical orders.
+        El/la supervisor/a de piso, a menudo llamado/a enfermero/a a cargo, supervisa toda la
+        atención a pacientes durante un turno. Coordina las asignaciones del personal, maneja
+        emergencias y garantiza que los tratamientos sigan las políticas de la clínica y las
+        órdenes médicas.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Supervise the nursing and technician team during the shift.</li>
-        <li>Respond to urgent medical situations or treatment complications.</li>
-        <li>Ensure each patient’s dialysis prescription is followed correctly.</li>
-        <li>Manage staffing needs and patient flow for the day.</li>
+        <li>Supervisar al equipo de enfermería y técnicos durante el turno.</li>
+        <li>Responder a situaciones médicas urgentes o complicaciones del tratamiento.</li>
+        <li>Asegurar que se cumpla correctamente la prescripción de diálisis de cada paciente.</li>
+        <li>Gestionar las necesidades de personal y el flujo de pacientes del día.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atienden</h2>
       <ul>
-        <li>Emergency medical situations during treatment.</li>
-        <li>Escalated patient concerns that the assigned nurse or technician can’t resolve.</li>
-        <li>Decisions about temporarily adjusting care in unusual situations.</li>
-        <li>Coordinating care when a patient needs to transfer to another unit or hospital.</li>
+        <li>Situaciones médicas de emergencia durante el tratamiento.</li>
+        <li>Preocupaciones de pacientes escaladas que la enfermera o el técnico asignados no pueden resolver.</li>
+        <li>Decisiones sobre ajustes temporales de la atención en situaciones inusuales.</li>
+        <li>Coordinación de la atención cuando un paciente necesita trasladarse a otra unidad u hospital.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>If you have an urgent concern that isn’t being addressed by your assigned nurse or technician.</li>
-        <li>For questions about how your care is being coordinated during that shift.</li>
-        <li>If you experience a serious or worsening medical issue during dialysis.</li>
+        <li>Si tienes una preocupación urgente que tu enfermera o técnico asignados no están abordando.</li>
+        <li>Para preguntas sobre cómo se coordina tu atención durante ese turno.</li>
+        <li>Si presentas un problema médico grave o que va empeorando durante la diálisis.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestionan (límites)</h2>
       <ul>
-        <li>Long-term changes to your treatment plan — those must be made by your nephrologist.</li>
-        <li>Scheduling, billing, or insurance matters.</li>
-        <li>Non-urgent concerns that can be handled by your regular nurse or technician.</li>
+        <li>Cambios a largo plazo en tu plan de tratamiento — los realiza tu nefrólogo/a.</li>
+        <li>Programación, facturación o temas de seguros.</li>
+        <li>Asuntos no urgentes que puede manejar tu enfermera o técnico habitual.</li>
       </ul>
     </main>
 
     <!-- Footer -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
