--- a/es/hub/dialysis/staff/nephrologist.html
+++ b/es/hub/dialysis/staff/nephrologist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nephrologist</title>
-    <meta name="description" content="What the nephrologist does, when to go to them, and what they do not handle. Clear guidance for dialysis patients and caregivers." />
+    <title>Nefrólogo/a — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la nefrólogo/a, cuándo acudir y qué no gestiona. Guía clara para pacientes en diálisis y cuidadores." />
 
     <!-- Google Fonts: Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,63 +24,64 @@
     <!-- Site CSS -->
     <link rel="stylesheet" href="/assets/css/main.css" />
 
-    <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <!-- Include loader -->
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header include -->
     <div data-include="/includes_es/header.html"></div>
 
     <main class="content" id="main">
-      <!-- Dialysis subnav include -->
+      <!-- Dialysis subnav includes -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Nephrologist</h1>
+      <h1>Nefrólogo/a</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        A nephrologist is a doctor who specializes in kidney care. They are responsible for your overall dialysis
-        prescription, long-term treatment plan, and medical decisions related to your kidney disease.
+        El/la nefrólogo/a es el/la médico especialista en salud renal. Se encarga de tu
+        prescripción de diálisis, del plan de tratamiento a largo plazo y de las decisiones
+        médicas relacionadas con tu enfermedad renal.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Diagnose and manage kidney disease and related conditions.</li>
-        <li>Set and update your dialysis prescription (treatment time, frequency, fluid goals, dialyzer type).</li>
-        <li>Monitor lab results and adjust medications accordingly.</li>
-        <li>Coordinate care with other specialists, such as cardiologists or surgeons.</li>
-        <li>Provide medical clearance for procedures or surgeries when needed.</li>
+        <li>Diagnosticar y manejar la enfermedad renal y condiciones asociadas.</li>
+        <li>Definir y actualizar tu prescripción de diálisis (tiempo, frecuencia, metas de líquidos/UF, tipo de dializador).</li>
+        <li>Vigilar los resultados de laboratorio y ajustar los medicamentos según corresponda.</li>
+        <li>Coordinar la atención con otros especialistas (cardiología, cirugía, etc.).</li>
+        <li>Brindar autorización médica para procedimientos o cirugías cuando se necesite.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atiende</h2>
       <ul>
-        <li>Ongoing kidney-related health problems.</li>
-        <li>Complications from dialysis, such as anemia, bone disease, or electrolyte imbalances.</li>
-        <li>Deciding when to adjust dialysis parameters for better results.</li>
-        <li>Evaluating you for transplant referral or follow-up.</li>
+        <li>Problemas de salud relacionados con el riñón de forma continua.</li>
+        <li>Complicaciones de la diálisis (anemia, enfermedad ósea, desequilibrios electrolíticos).</li>
+        <li>Decidir cuándo ajustar parámetros de diálisis para mejores resultados.</li>
+        <li>Evaluarte para referencia a trasplante o seguimiento postrasplante.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>During scheduled clinic rounds for questions about your treatment plan.</li>
-        <li>If you want to discuss changes to dialysis frequency or goals.</li>
-        <li>For concerns about ongoing symptoms that persist between treatments.</li>
-        <li>When you need medical documentation for another provider or insurance.</li>
+        <li>Durante las rondas programadas para dudas sobre tu plan de tratamiento.</li>
+        <li>Si quieres hablar de cambios en la frecuencia o en las metas de diálisis.</li>
+        <li>Ante síntomas que persisten entre sesiones.</li>
+        <li>Cuando necesitas documentación médica para otro proveedor o para tu seguro.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestiona (límites)</h2>
       <ul>
-        <li>Day-to-day scheduling, transportation, or insurance matters.</li>
-        <li>On-the-spot equipment troubleshooting; technicians and nurses handle that.</li>
-        <li>Diet counseling beyond basic medical guidance; detailed plans come from the dietitian.</li>
+        <li>Programación diaria, transporte o trámites de seguros.</li>
+        <li>Solución inmediata de fallas del equipo; eso lo manejan técnicos y enfermería.</li>
+        <li>Planes dietéticos detallados; esos los elabora el/la dietista.</li>
       </ul>
     </main>
 
     <!-- Footer include -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
