--- a/es/hub/dialysis/staff/nurse.html
+++ b/es/hub/dialysis/staff/nurse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dialysis Nurse (RN)</title>
-    <meta name="description" content="What dialysis nurses (RNs) do, when to go to them, and what they don’t handle—clear guidance for patients and caregivers." />
+    <title>Enfermero/a de diálisis (RN) — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hacen los/las enfermeros/as de diálisis (RN), cuándo acudir a ellos/as y qué no gestionan — guía clara para pacientes y cuidadores." />
 
     <!-- Google Fonts: Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header include -->
     <div data-include="/includes_es/header.html"></div>
@@ -35,53 +35,53 @@
     <main class="content" id="main">
       <!-- Dialysis subnav include -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Dialysis Nurse (RN)</h1>
+      <h1>Enfermero/a de diálisis (RN)</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        Dialysis nurses are registered nurses who oversee your care during treatments.
-        They coordinate with the nephrologist, supervise technicians, and handle any
-        medical issues that arise in the clinic.
+        Los/las enfermeros/as de diálisis son profesionales titulados que supervisan tu atención durante
+        los tratamientos. Coordinan con el/la nefrólogo/a, supervisan a los/las técnicos/as y manejan
+        cualquier situación médica que surja en la clínica.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Review your health status before treatment and adjust care as needed.</li>
-        <li>Give IV medications such as iron, antibiotics, or anticoagulants.</li>
-        <li>Monitor your response to treatment and address urgent health changes.</li>
-        <li>Educate patients on dialysis care, diet, and medications.</li>
-        <li>Supervise and support the work of dialysis technicians.</li>
+        <li>Revisar tu estado de salud antes del tratamiento y ajustar la atención según sea necesario.</li>
+        <li>Administrar medicamentos intravenosos como hierro, antibióticos o anticoagulantes.</li>
+        <li>Monitorizar tu respuesta al tratamiento y atender cambios de salud urgentes.</li>
+        <li>Educar a pacientes sobre cuidados de diálisis, alimentación y medicamentos.</li>
+        <li>Supervisar y apoyar el trabajo de los/las técnicos/as de diálisis.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atienden</h2>
       <ul>
-        <li>Blood pressure drops, cramping, chest pain, or shortness of breath during treatment.</li>
-        <li>Concerns about your vascular access, such as swelling, redness, or signs of infection.</li>
-        <li>Questions about lab results or changes in your health between nephrologist visits.</li>
-        <li>Clarifying the dialysis prescription and explaining any adjustments.</li>
+        <li>Descensos de presión arterial, calambres, dolor en el pecho o falta de aire durante el tratamiento.</li>
+        <li>Problemas con tu acceso vascular, como hinchazón, enrojecimiento o signos de infección.</li>
+        <li>Dudas sobre resultados de laboratorio o cambios en tu salud entre visitas al nefrólogo/a.</li>
+        <li>Aclarar la prescripción de diálisis y explicar cualquier ajuste.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>If you have sudden symptoms during dialysis.</li>
-        <li>For clarification about treatment orders or recent lab results.</li>
-        <li>If you notice changes to your access site between sessions.</li>
-        <li>When your technician refers an issue to the nurse for medical review.</li>
+        <li>Si presentas síntomas súbitos durante la diálisis.</li>
+        <li>Para aclarar órdenes de tratamiento o resultados de laboratorio recientes.</li>
+        <li>Si notas cambios en tu sitio de acceso entre sesiones.</li>
+        <li>Cuando tu técnico/a remite un problema a enfermería para revisión médica.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestionan (límites)</h2>
       <ul>
-        <li>Changing your long-term dialysis plan without nephrologist approval.</li>
-        <li>Authorizing non-dialysis prescriptions or treatments outside their scope.</li>
-        <li>Handling insurance or billing questions — those go to the financial coordinator.</li>
+        <li>Cambiar tu plan de diálisis a largo plazo sin aprobación del/de la nefrólogo/a.</li>
+        <li>Autorizar recetas o tratamientos ajenos a diálisis fuera de su ámbito profesional.</li>
+        <li>Gestionar preguntas de seguros o facturación — eso corresponde al/la coordinador/a financiero/a.</li>
       </ul>
     </main>
 
     <!-- Footer include -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
