--- a/es/hub/dialysis/staff/receptionist.html
+++ b/es/hub/dialysis/staff/receptionist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Patient Services Coordinator (Receptionist)</title>
-    <meta name="description" content="What the patient services coordinator does, when to go to them, and what they don’t handle—check-ins, scheduling, transfers, and communication." />
+    <title>Coordinador/a de servicios al paciente (Recepción) — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la coordinador/a de servicios al paciente, cuándo acudir y qué no gestiona: ingresos, programación, traslados y comunicación." />
 
     <!-- Fonts & CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,62 +22,62 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/main.css" />
 
-    <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <!-- Include loader -->
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header -->
     <div data-include="/includes_es/header.html"></div>
 
     <main class="content" id="main">
-      <!-- Dialysis subnav -->
+      <!-- Subnavs -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Patient Services Coordinator (Receptionist)</h1>
+      <h1>Coordinador/a de servicios al paciente (Recepción)</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        The patient services coordinator is the first point of contact when you arrive at the clinic.
-        They manage check-ins, scheduling, and communication, and may help arrange travel to other units if needed.
+        El/la coordinador/a de servicios al paciente es tu primer punto de contacto al llegar a la clínica.
+        Gestiona ingresos, programación y comunicación, y puede ayudar a organizar traslados a otras unidades si hace falta.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Greet and check in patients for each treatment.</li>
-        <li>Manage the dialysis schedule and appointment changes.</li>
-        <li>Coordinate patient transfers to other units when necessary.</li>
-        <li>Relay messages between patients and clinical staff.</li>
+        <li>Recibir e ingresar a los pacientes en cada tratamiento.</li>
+        <li>Gestionar el horario de diálisis y cambios de cita.</li>
+        <li>Coordinar traslados de pacientes a otras unidades cuando sea necesario.</li>
+        <li>Transmitir mensajes entre pacientes y el personal clínico.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atiende</h2>
       <ul>
-        <li>Scheduling or rescheduling dialysis treatments.</li>
-        <li>Arranging travel or transportation to a different dialysis unit.</li>
-        <li>Updating your contact or emergency information.</li>
-        <li>Communicating non-urgent messages to nurses, social workers, or other staff.</li>
+        <li>Programar o reprogramar tratamientos de diálisis.</li>
+        <li>Organizar viaje o transporte a otra unidad de diálisis.</li>
+        <li>Actualizar tu información de contacto o de emergencias.</li>
+        <li>Comunicar mensajes no urgentes a enfermería, trabajo social u otro personal.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>If you need to change your appointment time or date.</li>
-        <li>When you need help arranging dialysis at another location.</li>
-        <li>To update personal or emergency contact information.</li>
-        <li>For general questions about clinic hours or policies.</li>
+        <li>Si necesitas cambiar la hora o la fecha de tu cita.</li>
+        <li>Cuando requieras ayuda para coordinar diálisis en otra ubicación.</li>
+        <li>Para actualizar datos personales o contactos de emergencia.</li>
+        <li>Para preguntas generales sobre horarios o políticas de la clínica.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestiona (límites)</h2>
       <ul>
-        <li>Making medical decisions or adjusting your dialysis prescription.</li>
-        <li>Resolving clinical concerns — those go to the nurse, floor supervisor, or nephrologist.</li>
-        <li>Managing insurance or billing questions — those go to the financial coordinator.</li>
+        <li>Tomar decisiones médicas o ajustar tu prescripción de diálisis.</li>
+        <li>Resolver inquietudes clínicas — eso corresponde a enfermería, supervisor/a de piso o nefrólogo/a.</li>
+        <li>Gestionar seguros o facturación — lo maneja el/la coordinador/a financiero/a.</li>
       </ul>
     </main>
 
     <!-- Footer -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
