--- a/es/hub/dialysis/staff/social-worker.html
+++ b/es/hub/dialysis/staff/social-worker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Social Worker</title>
-    <meta name="description" content="What the dialysis social worker does, when to go to them, and what they don’t handle—support for emotional, financial, and practical needs." />
+    <title>Trabajador/a social — Tito Necesita un Riñón</title>
+    <meta name="description" content="Qué hace el/la trabajador/a social de diálisis, cuándo acudir y qué no gestiona—apoyo emocional, financiero y práctico." />
 
     <!-- Fonts & CSS (match site) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,10 +22,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css" />
 
-    <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <!-- Include loader -->
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
     <!-- Header -->
     <div data-include="/includes_es/header.html"></div>
@@ -33,51 +33,52 @@
     <main class="content" id="main">
       <!-- Dialysis subnav -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Social Worker</h1>
+      <h1>Trabajador/a social</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        The dialysis social worker supports your emotional well-being and helps you navigate the practical
-        challenges of living with kidney disease. They connect you to resources, counseling, and assistance programs.
+        El/la trabajador/a social de diálisis apoya tu bienestar emocional y te ayuda a
+        afrontar los retos prácticos de vivir con enfermedad renal. Te conecta con recursos,
+        consejería y programas de asistencia.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Provide emotional support and coping strategies for living with dialysis.</li>
-        <li>Help with applications for disability benefits, Medicare/Medicaid, and other assistance programs.</li>
-        <li>Connect patients with transportation services, support groups, and community resources.</li>
-        <li>Assist with advance care planning and legal paperwork if needed.</li>
+        <li>Brindar apoyo emocional y estrategias de afrontamiento para vivir con diálisis.</li>
+        <li>Ayudar con solicitudes de prestaciones por discapacidad, Medicare/Medicaid y otros programas de ayuda.</li>
+        <li>Conectar a los pacientes con transporte, grupos de apoyo y recursos comunitarios.</li>
+        <li>Apoyar en la planificación anticipada de cuidados y el papeleo legal si hace falta.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atiende</h2>
       <ul>
-        <li>Emotional distress, anxiety, depression, or burnout related to dialysis.</li>
-        <li>Financial hardship, housing issues, or job loss connected to illness.</li>
-        <li>Arranging special accommodations for work or school while on dialysis.</li>
-        <li>Coordinating non-medical support services for patients and families.</li>
+        <li>Malestar emocional, ansiedad, depresión o agotamiento relacionado con la diálisis.</li>
+        <li>Dificultades económicas, de vivienda o pérdida de empleo relacionadas con la enfermedad.</li>
+        <li>Gestión de adaptaciones especiales en trabajo o escuela mientras estás en diálisis.</li>
+        <li>Coordinación de servicios de apoyo no médicos para pacientes y familias.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>If you feel overwhelmed, anxious, or depressed about your health situation.</li>
-        <li>When you need help finding transportation or financial assistance programs.</li>
-        <li>For guidance on disability applications or insurance paperwork.</li>
-        <li>If your living situation affects your ability to attend dialysis consistently.</li>
+        <li>Si te sientes abrumado/a, ansioso/a o deprimido/a por tu situación de salud.</li>
+        <li>Cuando necesitas ayuda para encontrar transporte o programas de asistencia financiera.</li>
+        <li>Para orientación con solicitudes de discapacidad o trámites de seguro.</li>
+        <li>Si tu situación de vivienda afecta tu capacidad de asistir a la diálisis de forma constante.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestiona (límites)</h2>
       <ul>
-        <li>Making changes to your dialysis treatment or prescription.</li>
-        <li>Providing direct medical care or medication advice.</li>
-        <li>Scheduling your dialysis appointments or arranging equipment repairs.</li>
+        <li>Realizar cambios en tu tratamiento o prescripción de diálisis.</li>
+        <li>Brindar atención médica directa o aconsejar sobre medicamentos.</li>
+        <li>Programar tus citas de diálisis u organizar reparaciones de equipos.</li>
       </ul>
     </main>
 
     <!-- Footer -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
