--- a/es/hub/dialysis/staff/technician.html
+++ b/es/hub/dialysis/staff/technician.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <div data-include="/includes_es/meta.html"></div>
+    <div data-include="/includes_es/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -13,77 +13,78 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dialysis Technician / Patient Care Technician (PCT)</title>
+    <title>Técnico/a de diálisis / Técnico/a de atención al paciente (PCT) — Tito Necesita un Riñón</title>
 
     <!-- Google Fonts: Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!-- Site CSS (root-absolute, same as other pages) -->
+    <!-- Site CSS -->
     <link rel="stylesheet" href="/assets/css/main.css" />
 
-    <!-- Include loader (one level deeper than side-effects.html) -->
-  <script src="/scripts/include.js" defer></script>
-  <script src="/scripts/active-link.js" defer></script>
-</head>
+    <!-- Include loader -->
+    <script src="/scripts/include.js" defer></script>
+    <script src="/scripts/active-link.js" defer></script>
+  </head>
   <body>
-    <!-- Header include (one level deeper) -->
+    <!-- Header include -->
     <div data-include="/includes_es/header.html"></div>
 
     <main class="content" id="main">
-      <!-- Dialysis subnav include -->
+      <!-- Subnavs -->
       <div data-include="/includes_es/dialysis-subnav.html"></div>
-  <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes_es/dialysis-staff-subnav.html"></div>
 
-      <h1>Dialysis Technician / Patient Care Technician (PCT)</h1>
+      <h1>Técnico/a de diálisis / Técnico/a de atención al paciente (PCT)</h1>
 
-      <h2>Short Description</h2>
+      <h2>Descripción breve</h2>
       <p>
-        Dialysis Technicians, often called Patient Care Technicians (PCTs), are the frontline staff who set up your machine,
-        start and end your treatments, and monitor your safety throughout the session. They work closely with nurses to make
-        sure each treatment is done correctly.
+        Los/las técnicos/as de diálisis, también llamados PCT (<em>Patient Care Technician</em>),
+        son el personal de primera línea que prepara tu máquina, inicia y finaliza tus
+        tratamientos y vigila tu seguridad durante toda la sesión. Trabajan de cerca con
+        enfermería para asegurar que cada tratamiento se realice correctamente.
       </p>
 
-      <h2>Main Priorities</h2>
+      <h2>Prioridades principales</h2>
       <ul>
-        <li>Prepare and test the dialysis machine before use.</li>
-        <li>Safely connect and disconnect patients from treatment.</li>
-        <li>Monitor blood pressure, pulse, and other vital signs.</li>
-        <li>Watch for complications during treatment and alert the nurse when needed.</li>
-        <li>Keep treatment areas clean and stocked.</li>
+        <li>Preparar y comprobar la máquina de diálisis antes de usarla.</li>
+        <li>Conectar y desconectar a los pacientes de forma segura.</li>
+        <li>Monitorizar presión arterial, pulso y otros signos vitales.</li>
+        <li>Vigilar complicaciones durante el tratamiento y avisar a enfermería cuando sea necesario.</li>
+        <li>Mantener las áreas de tratamiento limpias y abastecidas.</li>
       </ul>
 
-      <h2>Issues They Work With</h2>
+      <h2>Temas que atienden</h2>
       <ul>
-        <li>Problems with needles, fistulas, or grafts during hookup.</li>
-        <li>Adjusting your position, arm supports, or lines to stay comfortable.</li>
-        <li>Responding to alarms from the machine.</li>
-        <li>Noticing and reporting sudden changes in blood pressure or symptoms.</li>
+        <li>Problemas con agujas, fístulas o injertos durante la conexión.</li>
+        <li>Ajustes de posición, apoyos del brazo o líneas para mantener la comodidad.</li>
+        <li>Atención a las alarmas de la máquina.</li>
+        <li>Detección y reporte de cambios bruscos en la presión arterial o en síntomas.</li>
       </ul>
 
-      <h2>When to Go to Them</h2>
+      <h2>Cuándo acudir</h2>
       <ul>
-        <li>At the start or end of treatment to report any new pain, swelling, or access concerns.</li>
-        <li>If you feel dizzy, short of breath, crampy, or otherwise unwell during treatment.</li>
-        <li>If your machine alarms and they haven’t seen it yet.</li>
-        <li>For small adjustments to your setup during a run.</li>
+        <li>Al inicio o al final del tratamiento para informar dolor nuevo, hinchazón o dudas sobre el acceso.</li>
+        <li>Si sientes mareo, falta de aire, calambres u otro malestar durante la sesión.</li>
+        <li>Cuando la máquina alarma y aún no lo han visto.</li>
+        <li>Para pequeños ajustes de tu configuración durante la corrida.</li>
       </ul>
 
-      <h2>What They Don’t Handle (Boundaries)</h2>
+      <h2>Lo que no gestionan (límites)</h2>
       <ul>
         <li>
-          Changing your dialysis prescription (treatment time, fluid goal, dialyzer type) — that must come from
-          the nurse or nephrologist.
+          Cambiar tu prescripción de diálisis (tiempo, meta de líquidos/UF, tipo de dializador) — eso debe venir
+          de enfermería o del/de la nefrólogo/a.
         </li>
-        <li>Making medical diagnoses.</li>
-        <li>Approving changes to your medication list.</li>
+        <li>Realizar diagnósticos médicos.</li>
+        <li>Aprobar cambios en tu lista de medicamentos.</li>
       </ul>
     </main>
 
-    <!-- Footer include (one level deeper) -->
+    <!-- Footer include -->
     <div data-include="/includes_es/footer.html"></div>
-  <script src="/scripts/analytics.js" defer></script>
-</body>
+    <script src="/scripts/analytics.js" defer></script>
+  </body>
 </html>
 
