--- a/es/hub/index.html
+++ b/es/hub/index.html
@@ -1,78 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
   <div data-include="/includes_es/meta.html"></div>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kidney Knowledge Hub</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Centro de conocimiento renal — Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
   <div data-include="/includes_es/header.html"></div>
+
   <main class="content" id="main">
-    <h1>Kidney Knowledge Hub</h1>
+    <h1>Centro de conocimiento renal</h1>
     <p>
-      Clear, honest information for anyone navigating kidney disease, dialysis, transplant,
-      or living donation. Explore each section to find practical guides, personal stories,
-      and resources to help you or a loved one through every stage of kidney care.
+      Información clara y honesta para quienes navegan la enfermedad renal, la diálisis, el trasplante
+      o la donación en vida. Explora cada sección para encontrar guías prácticas, historias personales
+      y recursos que te ayuden a ti o a un ser querido en cada etapa del cuidado renal.
     </p>
 
     <section class="testimonial-summary">
-      <h2><a href="dialysis/index.html">Dialysis Hub</a></h2>
+      <h2><a href="dialysis/index.html">Centro de diálisis</a></h2>
       <p>
-        Learn about clinic staff roles, dialysis access types, what to expect during
-        treatments, managing side effects, and tips for adjusting to life on dialysis.
+        Conoce las funciones del personal de la clínica, los tipos de acceso para diálisis, qué esperar durante
+        los tratamientos, cómo manejar los efectos secundarios y consejos para adaptarte a la vida en diálisis.
       </p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="transplant/index.html">Transplant Hub</a></h2>
+      <h2><a href="transplant/index.html">Centro de trasplante</a></h2>
       <p>
-        From evaluation to surgery and post-transplant life, explore each stage of the
-        transplant journey, recovery timelines, managing medications, and avoiding complications.
+        Desde la evaluación hasta la cirugía y la vida después del trasplante: etapas del proceso, tiempos de recuperación,
+        manejo de medicamentos y cómo evitar complicaciones.
       </p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="donation/index.html">Living Donation Hub</a></h2>
+      <h2><a href="donation/index.html">Centro de donación en vida</a></h2>
       <p>
-        Understand who can donate, the testing process, surgical risks, and recovery
-        details. Includes real donor stories and insights into long-term outcomes
-        of living kidney donation.
+        Quién puede donar, el proceso de pruebas, los riesgos quirúrgicos y los detalles de recuperación.
+        Incluye testimonios reales de donantes y perspectivas sobre los resultados a largo plazo.
       </p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="../donor-testimonials.html">Donor Testimonials</a></h2>
+      <h2><a href="../donor-testimonials.html">Testimonios de donantes</a></h2>
       <p>
-        Read inspiring stories from people who stepped forward to help, offering insight
-        into the emotional and physical journey of living kidney donation.
+        Lee historias inspiradoras de personas que dieron un paso al frente, con una mirada al recorrido emocional y físico
+        de la donación renal en vida.
       </p>
     </section>
+
     <div class="callout">
-  <p>
-    🧠 <strong>Explore the Full Hub</strong><br>
-    The Kidney Knowledge Hub is your starting point for understanding kidney health, 
-    dialysis, transplant, and donation. Dive into each section at your own pace, 
-    and check back as we continue adding more guides and resources.
-  </p>
-</div>
+      <p>
+        🧠 <strong>Explora todo el centro</strong><br>
+        El Centro de conocimiento renal es tu punto de partida para entender la salud renal,
+        la diálisis, el trasplante y la donación. Avanza a tu ritmo y vuelve más adelante:
+        seguimos agregando guías y recursos.
+      </p>
+    </div>
   </main>
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
