--- a/es/hub/dialysis/expectations.html
+++ b/es/hub/dialysis/expectations.html
@@ -1,123 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
   <div data-include="/includes_es/meta.html"></div>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>What to Expect During Dialysis</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Qué esperar durante la diálisis — Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
-  <body>
-    <div data-include="/includes_es/header.html"></div>
-    <main class="content" id="main">
-<div data-include="/includes_es/dialysis-subnav.html"></div>
-<h1>Dialysis: What to Expect</h1>
-<p>
-  The first month is about finding your rhythm: a steady schedule, a comfortable chair setup,
-  and small habits that make treatments easier. Plans vary by center—this is a plain-English overview.
-</p>
+<body>
+  <div data-include="/includes_es/header.html"></div>
+  <main class="content" id="main">
+    <div data-include="/includes_es/dialysis-subnav.html"></div>
 
-<h2>Your weekly rhythm</h2>
-<ul>
-  <li><strong>Schedule:</strong> most people go 3 days/week (e.g., Mon–Wed–Fri or Tue–Thu–Sat).</li>
-  <li><strong>Session length:</strong> usually 3–5 hours on the machine, plus check-in and wrap-up.</li>
-  <li><strong>Energy curve:</strong> you may feel tired after; many people plan quiet time post-treatment.</li>
-</ul>
+    <h1>Diálisis: qué esperar</h1>
+    <p>
+      El primer mes se trata de encontrar tu ritmo: un horario estable, una silla cómoda
+      y pequeños hábitos que hacen las sesiones más llevaderas. Los planes varían según el centro;
+      esto es una guía sencilla en lenguaje claro.
+    </p>
 
-<h2>First visit flow (typical)</h2>
-<ul>
-  <li><strong>Check-in:</strong> weight, blood pressure (BP), symptoms, any new meds or changes.</li>
-  <li><strong>Access prep:</strong> catheter dressing check or fistula/graft cleaning; numbing if used.</li>
-  <li><strong>Needles (if AVF/AVG):</strong> two needles go in—one pulls blood to the dialyzer, one returns it.</li>
-  <li><strong>Heparin:</strong> a blood-thinner during treatment to keep the circuit from clotting.</li>
-  <li><strong>During treatment:</strong> BP and symptoms watched; fluid removal (ultrafiltration) adjusted to keep you comfortable.</li>
-  <li><strong>Coming off:</strong> needles out with pressure and bandages; re-check weight and BP; a brief look for bleeding or dizziness.</li>
-</ul>
+    <h2>Tu ritmo semanal</h2>
+    <ul>
+      <li><strong>Horario:</strong> la mayoría acude 3 días/semana (p. ej., lun–mié–vie o mar–jue–sáb).</li>
+      <li><strong>Duración por sesión:</strong> usualmente 3–5 horas en la máquina, más ingreso y salida.</li>
+      <li><strong>Energía:</strong> puedes sentirte cansado/a después; muchas personas planean un tiempo de calma tras el tratamiento.</li>
+    </ul>
 
-<h2>Comfort & routine in the chair</h2>
-<ul>
-  <li><strong>Clothing:</strong> sleeves that roll up easily; layers—rooms can feel cool.</li>
-  <li><strong>Setup:</strong> pillow/blanket, headphones, a book or show downloaded, charger.</li>
-  <li><strong>Motion:</strong> gentle ankle pumps and wiggles help reduce cramps; ask what’s OK with your access.</li>
-  <li><strong>Food & drink:</strong> centers differ—ask what’s allowed during treatment.</li>
-</ul>
+    <h2>Flujo de la primera visita (típico)</h2>
+    <ul>
+      <li><strong>Ingreso:</strong> peso, presión arterial (PA), síntomas, cambios de medicación.</li>
+      <li><strong>Preparación del acceso:</strong> revisión del apósito del catéter o limpieza de fístula/injerto; anestesia local si se usa.</li>
+      <li><strong>Agujas (si AVF/AVG):</strong> se colocan dos: una lleva sangre al dializador y otra la devuelve.</li>
+      <li><strong>Heparina:</strong> anticoagulante durante la sesión para evitar coágulos en el circuito.</li>
+      <li><strong>Durante el tratamiento:</strong> se vigilan PA y síntomas; se ajusta la ultrafiltración para mantenerte cómodo/a.</li>
+      <li><strong>Al terminar:</strong> se retiran agujas con presión y apósitos; nueva toma de peso y PA; revisión breve por sangrado o mareo.</li>
+    </ul>
 
-<h2>Access basics (quick)</h2>
-<ul>
-  <li><strong>Catheter:</strong> keep dressing clean/dry; no tugs; report fever or redness.</li>
-  <li><strong>Fistula/Graft:</strong> protect the arm (no BP/IVs), feel the <em>thrill</em> daily; call if it’s weak/gone.</li>
-  <li><strong>Needling style:</strong> rope-ladder or buttonhole—your center will explain what they use and why.</li>
-</ul>
+    <h2>Comodidad y rutina en la silla</h2>
+    <ul>
+      <li><strong>Ropa:</strong> mangas que se suban fácil; capas—las salas pueden sentirse frescas.</li>
+      <li><strong>Montaje:</strong> almohada/manta, audífonos, libro o serie descargada, cargador.</li>
+      <li><strong>Movimiento:</strong> bombeos suaves de tobillos y pequeños movimientos ayudan a reducir calambres; pregunta qué está permitido según tu acceso.</li>
+      <li><strong>Comida y bebida:</strong> depende del centro—consulta qué autorizan durante la sesión.</li>
+    </ul>
 
-<h2>Fluid, weight, and “dry weight”</h2>
-<ul>
-  <li><strong>Target (dry) weight:</strong> your “no-extra-fluid” weight—dialysis aims to bring you close to this.</li>
-  <li><strong>Between sessions:</strong> many people limit fluid and salt to avoid large gains (which can cause cramps and low BP).</li>
-  <li><strong>Tips:</strong> smaller sips spread out, ice chips, lemon wedges, sugar-free gum, and lower-salt meals help thirst.</li>
-</ul>
+    <h2>Acceso: lo básico (rápido)</h2>
+    <ul>
+      <li><strong>Catéter:</strong> mantener el apósito limpio y seco; sin tirones; reporta fiebre o enrojecimiento.</li>
+      <li><strong>Fístula/Injerto:</strong> protege el brazo (sin PA/IV); siente a diario el <em>frémito</em> (<em>thrill</em>); llama si está débil o desaparece.</li>
+      <li><strong>Técnica de punción:</strong> “escalera” o “buttonhole”; tu centro explicará cuál usa y por qué.</li>
+    </ul>
 
-<h2>Common feelings & fixes</h2>
-<ul>
-  <li><strong>Low BP/light-headed:</strong> tell staff; they can lower fluid removal, lay you back, give fluids, or adjust next time.</li>
-  <li><strong>Cramps:</strong> slow fluid removal, warmth, gentle stretches; ask about tweaks for the next session.</li>
-  <li><strong>“Dialysis hangover” (fatigue, fog):</strong> hydrate as directed, a snack after, and a planned rest window often help.</li>
-  <li><strong>Itchy skin:</strong> moisturize; ask about phosphorus control and other causes if persistent.</li>
-</ul>
+    <h2>Fluidos, peso y “peso seco”</h2>
+    <ul>
+      <li><strong>Peso objetivo (seco):</strong> tu peso sin líquido extra; la diálisis busca acercarte a él.</li>
+      <li><strong>Entre sesiones:</strong> muchas personas limitan líquidos y sal para evitar grandes aumentos (que pueden causar calambres y PA baja).</li>
+      <li><strong>Consejos:</strong> sorbos pequeños repartidos, trocitos de hielo, gajos de limón, chicle sin azúcar y comidas con menos sal ayudan con la sed.</li>
+    </ul>
 
-<h2>Labs & medicines (clinic side)</h2>
-<ul>
-  <li><strong>Monthly labs:</strong> hemoglobin, iron markers, electrolytes, albumin, and more to fine-tune care.</li>
-  <li><strong>In-center meds:</strong> some get IV iron or ESA injections; nurses will explain timing and side effects.</li>
-  <li><strong>At home:</strong> phosphate binders with meals/snacks, BP meds, vitamins—bring a list with exact times/doses.</li>
-</ul>
+    <h2>Sensaciones comunes y cómo aliviarlas</h2>
+    <ul>
+      <li><strong>PA baja/mareos:</strong> avisa al personal; pueden reducir la extracción de líquido, recostarte, darte fluidos o ajustar la siguiente sesión.</li>
+      <li><strong>Calambres:</strong> bajar la ultrafiltración, calor local, estiramientos suaves; pregunta por ajustes para la próxima vez.</li>
+      <li><strong>“Resaca de diálisis” (fatiga, niebla mental):</strong> hidrátate según indicación, un snack después y planifica un descanso.</li>
+      <li><strong>Piel con comezón:</strong> humecta; pregunta por control de fósforo u otras causas si persiste.</li>
+    </ul>
 
-<h2>Between treatments</h2>
-<ul>
-  <li><strong>Track:</strong> daily weight, home BP (if you have a cuff), swelling, shortness of breath, new symptoms.</li>
-  <li><strong>Meals:</strong> balanced protein, mindful sodium; ask the dietitian for a simple plan that fits your life.</li>
-  <li><strong>Movement:</strong> short daily walks or light exercises can improve energy and cramps.</li>
-  <li><strong>Logistics:</strong> reliable rides, backup plans, and an alarm/calendar reminder reduce missed sessions.</li>
-</ul>
+    <h2>Laboratorios y medicamentos (en clínica)</h2>
+    <ul>
+      <li><strong>Laboratorios mensuales:</strong> hemoglobina, hierro, electrolitos, albúmina y más para afinar tu plan.</li>
+      <li><strong>Medicamentos en centro:</strong> algunos reciben hierro IV o agentes estimulantes de eritropoyesis; enfermería explicará tiempos y efectos.</li>
+      <li><strong>En casa:</strong> captores de fósforo con comidas/snacks, fármacos para PA, vitaminas—lleva una lista con horarios y dosis exactas.</li>
+    </ul>
 
-<h2>People you’ll meet</h2>
-<ul>
-  <li><strong>Dialysis nurse/tech:</strong> day-to-day treatment, access care, and blood pressure/cramp troubleshooting.</li>
-  <li><strong>Nephrologist:</strong> rounds regularly; sets your prescription and long-term plan.</li>
-  <li><strong>Dietitian:</strong> food, fluids, phosphorus/potassium, and weight goals.</li>
-  <li><strong>Social worker:</strong> stress, transportation, work/benefits paperwork, and community resources.</li>
-</ul>
+    <h2>Entre tratamientos</h2>
+    <ul>
+      <li><strong>Registra:</strong> peso diario, PA en casa (si tienes manguito), hinchazón, falta de aire, síntomas nuevos.</li>
+      <li><strong>Comidas:</strong> proteína adecuada y sodio moderado; pide al/la dietista un plan simple que encaje con tu vida.</li>
+      <li><strong>Movimiento:</strong> caminatas cortas diarias o ejercicio ligero pueden mejorar energía y calambres.</li>
+      <li><strong>Logística:</strong> transporte confiable, planes de respaldo y recordatorios reducen ausencias.</li>
+    </ul>
 
-<h2>When to call (don’t wait)</h2>
-<ul>
-  <li><strong>Call the clinic now:</strong> fever, chills, new redness/pus at access, bleeding that won’t stop, severe cramps, chest pain, or shortness of breath.</li>
-  <li><strong>Go to ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, or you faint.</li>
-</ul>
+    <h2>Quiénes verás</h2>
+    <ul>
+      <li><strong>Enfermería/técnico de diálisis:</strong> tratamiento diario, cuidado del acceso y manejo de PA/calambres.</li>
+      <li><strong>Nefrólogo/a:</strong> pasa visita regularmente; define tu prescripción y plan a largo plazo.</li>
+      <li><strong>Dietista:</strong> alimentación, líquidos, fósforo/potasio y metas de peso.</li>
+      <li><strong>Trabajador/a social:</strong> estrés, transporte, trámites laborales/beneficios y recursos comunitarios.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Questions to ask:</strong> What’s my current dry-weight goal? How do we adjust if I cramp or get dizzy? Which symptoms mean “call now” vs. wait for my next session?</p>
-</div>
+    <h2>Cuándo llamar (no esperes)</h2>
+    <ul>
+      <li><strong>Llama al centro ahora:</strong> fiebre, escalofríos, enrojecimiento/pus en el acceso, sangrado que no cede, calambres severos, dolor en el pecho o falta de aire.</li>
+      <li><strong>Urgencias/911:</strong> dificultad respiratoria grave, dolor torácico persistente, confusión o desmayo.</li>
+    </ul>
 
-<p class="disclaimer">Educational only. Your dialysis team will tailor the plan to you.</p>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> ¿Cuál es mi peso seco actual? ¿Cómo ajustamos si tengo calambres o mareos? ¿Qué síntomas significan “llamar ahora” vs. esperar a mi próxima sesión?</p>
+    </div>
 
-
-
-    </main>
-    <div data-include="/includes_es/footer.html"></div>
+    <p class="disclaimer">Contenido educativo. Tu equipo de diálisis adaptará el plan a tu situación.</p>
+  </main>
+  <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
