--- a/es/hub/dialysis/schedule.html
+++ b/es/hub/dialysis/schedule.html
@@ -1,118 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
   <div data-include="/includes_es/meta.html"></div>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dialysis Schedule & Timing</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Horarios y planificación de la diálisis — Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
-  <body>
-    <div data-include="/includes_es/header.html"></div>
-    <main class="content" id="main">
-<div data-include="/includes_es/dialysis-subnav.html"></div>
-<h1>Dialysis Schedule & Planning</h1>
-<p>
-  A steady schedule makes treatments easier on your body and your life. Most people do in-center hemodialysis
-  three times per week; the key is consistency and small routines that reduce stress.
-</p>
+<body>
+  <div data-include="/includes_es/header.html"></div>
+  <main class="content" id="main">
+    <div data-include="/includes_es/dialysis-subnav.html"></div>
 
-<h2>Your basic options</h2>
-<ul>
-  <li><strong>Standard shifts (3×/week):</strong> Mon–Wed–Fri or Tue–Thu–Sat; start times vary by center (early morning, midday, late).</li>
-  <li><strong>Long nights (“nocturnal”):</strong> fewer centers offer this; slower, longer sessions overnight can feel gentler.</li>
-  <li><strong>Home dialysis:</strong> separate program (more flexibility). Ask about training if you want more control.</li>
-</ul>
+    <h1>Horarios y planificación de la diálisis</h1>
+    <p>
+      Un horario estable hace que los tratamientos sean más llevaderos para tu cuerpo y tu vida.
+      La mayoría de las personas realiza hemodiálisis en clínica tres veces por semana; la clave es
+      la constancia y pequeñas rutinas que reducen el estrés.
+    </p>
 
-<h2>How a treatment day flows</h2>
-<ul>
-  <li><strong>Arrive early:</strong> a few minutes for check-in, weight, BP, and a quick symptom review.</li>
-  <li><strong>On machine:</strong> usually 3–5 hours depending on your prescription.</li>
-  <li><strong>Coming off:</strong> rinse-back, needles out, hold pressure, re-check weight/BP (plan ~20–30 minutes).</li>
-  <li><strong>After:</strong> give yourself a low-effort window. Many people walk a bit, snack, and rest.</li>
-</ul>
+    <h2>Tus opciones básicas</h2>
+    <ul>
+      <li><strong>Turnos estándar (3×/semana):</strong> lun–mié–vie o mar–jue–sáb; los horarios de inicio varían por centro (temprano, mediodía, tarde).</li>
+      <li><strong>Nocturna (sesiones largas):</strong> menos centros la ofrecen; sesiones más lentas y largas durante la noche pueden sentirse más suaves.</li>
+      <li><strong>Diálisis en casa:</strong> programa aparte (más flexibilidad). Pregunta por el entrenamiento si quieres más control.</li>
+    </ul>
 
-<h2>Picking a shift that fits</h2>
-<ul>
-  <li><strong>Work/school:</strong> ask for first or last shift to protect your job hours and commute.</li>
-  <li><strong>Rides:</strong> align start/end with your reliable transportation (family, paratransit, rideshare).</li>
-  <li><strong>Energy:</strong> some feel best early; others prefer later—try for 2–3 weeks before switching.</li>
-</ul>
+    <h2>Cómo fluye un día de tratamiento</h2>
+    <ul>
+      <li><strong>Llega con tiempo:</strong> unos minutos para ingreso, peso, presión arterial (PA) y repaso rápido de síntomas.</li>
+      <li><strong>En la máquina:</strong> por lo general 3–5 horas, según tu prescripción.</li>
+      <li><strong>Al terminar:</strong> devolución de sangre, retiro de agujas, mantener presión, nueva toma de peso/PA (calcula ~20–30 minutos).</li>
+      <li><strong>Después:</strong> regálate una ventana de baja demanda. Muchas personas caminan un poco, comen un snack y descansan.</li>
+    </ul>
 
-<h2>Week-to-week rhythm</h2>
-<ul>
-  <li><strong>Early week (Mon/Tue):</strong> weekend gaps can mean more fluid/weight to remove—arrive hydrated and eat a small snack.</li>
-  <li><strong>Midweek:</strong> often smoother; review any cramps or low BP with the team and adjust.</li>
-  <li><strong>End of week (Fri/Sat):</strong> ask about weekend plans—fluids, salt, and activity so Monday/Tuesday isn’t rough.</li>
-</ul>
+    <h2>Elegir un turno que encaje contigo</h2>
+    <ul>
+      <li><strong>Trabajo/escuela:</strong> pide primer o último turno para proteger tus horas laborales y el trayecto.</li>
+      <li><strong>Transporte:</strong> alinea inicio/fin con tu transporte confiable (familia, paratránsito, rideshare).</li>
+      <li><strong>Energía:</strong> algunas personas rinden mejor temprano; otras prefieren más tarde—prueba 2–3 semanas antes de cambiar.</li>
+    </ul>
 
-<h2>Planning around life</h2>
-<ul>
-  <li><strong>Holidays & appointments:</strong> tell the front desk early—centers can sometimes shift you to another day/shift.</li>
-  <li><strong>Travel:</strong> visitor dialysis is common; start requests 2–3 weeks in advance (longer for holidays). Your social worker can help fax orders and labs.</li>
-  <li><strong>Weather/back-up:</strong> swap phone numbers with the unit, know storm policies, and keep a ride back-up plan.</li>
-</ul>
+    <h2>Ritmo semana a semana</h2>
+    <ul>
+      <li><strong>Inicio de semana (lun/mar):</strong> la pausa del fin de semana puede implicar más líquido/peso a retirar—llega hidratado/a y come un snack ligero.</li>
+      <li><strong>Mitad de semana:</strong> suele ser más estable; revisa calambres o PA baja con el equipo y ajusten.</li>
+      <li><strong>Fin de semana (vie/sáb):</strong> planifica los días libres—líquidos, sal y actividad para que lunes/martes no sean duros.</li>
+    </ul>
 
-<h2>If you miss or cut short</h2>
-<ul>
-  <li><strong>Call the clinic right away.</strong> They may add time next session, schedule a make-up, or adjust fluid removal.</li>
-  <li><strong>Watch symptoms:</strong> shortness of breath, swelling, or chest pressure—report immediately.</li>
-  <li><strong>Don’t “double up” fluids or skip medicines</strong> without instructions—ask what to do safely.</li>
-</ul>
+    <h2>Planificar alrededor de tu vida</h2>
+    <ul>
+      <li><strong>Festivos y citas:</strong> avisa en recepción con antelación—a veces pueden mover tu sesión a otro día/turno.</li>
+      <li><strong>Viajes:</strong> la diálisis para visitantes es común; inicia los trámites 2–3 semanas antes (más en festivos). Tu trabajador/a social puede ayudar con órdenes y laboratorios.</li>
+      <li><strong>Clima/planes de respaldo:</strong> guarda teléfonos de la unidad, conoce las políticas ante tormentas y ten un plan B de transporte.</li>
+    </ul>
 
-<h2>What to bring</h2>
-<ul>
-  <li>Comfort: light blanket, layers, neck pillow, headphones, charger.</li>
-  <li>Practical: access arm warmers, lip balm, small snack (if allowed), a water bottle sized to your fluid plan.</li>
-  <li>Info: medication list with exact times, new prescriptions since last visit, questions for the team.</li>
-</ul>
+    <h2>Si faltas o terminas antes de tiempo</h2>
+    <ul>
+      <li><strong>Llama al centro de inmediato.</strong> Pueden añadir tiempo en la siguiente sesión, programar una de recuperación o ajustar la extracción de líquidos.</li>
+      <li><strong>Vigila síntomas:</strong> falta de aire, hinchazón o presión en el pecho—repórtalos de inmediato.</li>
+      <li><strong>No “dupliques” líquidos ni te saltes medicación</strong> sin indicaciones—pregunta cómo hacerlo de forma segura.</li>
+    </ul>
 
-<h2>Small habits that help</h2>
-<ul>
-  <li><strong>Calendar it:</strong> put all sessions in your phone with alarms; add “leave by” reminders.</li>
-  <li><strong>Evening prep:</strong> lay out clothes, badge/keys, and a small go-bag the night before.</li>
-  <li><strong>Between runs:</strong> spread fluids through the day; keep salt low to reduce cramps and low BP.</li>
-  <li><strong>Log it:</strong> jot post-run symptoms (cramps, dizziness) to fine-tune your next treatment.</li>
-</ul>
+    <h2>Qué llevar</h2>
+    <ul>
+      <li>Comodidad: manta ligera, capas, almohada cervical, audífonos, cargador.</li>
+      <li>Práctico: calentadores para el brazo del acceso, bálsamo labial, snack pequeño (si está permitido), botella acorde a tu plan de líquidos.</li>
+      <li>Información: lista de medicamentos con horarios exactos, recetas nuevas desde la última visita, preguntas para el equipo.</li>
+    </ul>
 
-<h2>People who can help with scheduling</h2>
-<ul>
-  <li><strong>Charge nurse/front desk:</strong> day-to-day shift swaps and time changes.</li>
-  <li><strong>Social worker:</strong> rides, paratransit, work forms, travel coordination.</li>
-  <li><strong>Nephrologist/dietitian:</strong> adjust time/ultrafiltration targets and weekly fluid/meal plans.</li>
-</ul>
+    <h2>Hábitos pequeños que ayudan</h2>
+    <ul>
+      <li><strong>Calendario:</strong> pon todas las sesiones en el teléfono con alarmas; añade recordatorios de “salir a tiempo”.</li>
+      <li><strong>Preparación nocturna:</strong> deja lista la ropa, gafete/llaves y una bolsa pequeña la noche anterior.</li>
+      <li><strong>Entre sesiones:</strong> reparte los líquidos durante el día; baja la sal para reducir calambres y PA baja.</li>
+      <li><strong>Registra:</strong> anota síntomas tras la sesión (calambres, mareos) para ajustar el próximo tratamiento.</li>
+    </ul>
 
-<h2>When to call (don’t wait)</h2>
-<ul>
-  <li><strong>Now:</strong> you can’t make your session, new fever/redness at access, bleeding that won’t stop, severe cramps or chest pain, shortness of breath.</li>
-  <li><strong>ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, fainting.</li>
-</ul>
+    <h2>Quién puede ayudarte con la programación</h2>
+    <ul>
+      <li><strong>Enfermera de turno/recepción:</strong> cambios de turno y de horario del día a día.</li>
+      <li><strong>Trabajador/a social:</strong> transporte, paratránsito, formularios laborales y coordinación de viajes.</li>
+      <li><strong>Nefrólogo/a y dietista:</strong> ajustar tiempo/metas de ultrafiltración y planes semanales de líquidos/comidas.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Questions to ask:</strong> Can I try a different shift for two weeks? What’s the plan if I cramp or get dizzy? How do we handle holidays, storms, or travel?</p>
-</div>
+    <h2>Cuándo llamar (no esperes)</h2>
+    <ul>
+      <li><strong>Ahora:</strong> no puedes asistir a tu sesión, fiebre nueva/enrojecimiento en el acceso, sangrado que no cede, calambres severos o dolor en el pecho, falta de aire.</li>
+      <li><strong>Urgencias/911:</strong> dificultad respiratoria grave, dolor torácico que no cede, confusión o desmayo.</li>
+    </ul>
 
-<p class="disclaimer">Educational only. Your dialysis team will tailor scheduling and goals to you.</p>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> ¿Puedo probar otro turno por dos semanas? ¿Cuál es el plan si tengo calambres o mareos? ¿Cómo manejamos festivos, tormentas o viajes?</p>
+    </div>
 
-
-
-    </main>
-    <div data-include="/includes_es/footer.html"></div>
+    <p class="disclaimer">Contenido educativo. Tu equipo de diálisis adaptará la programación y las metas a tu situación.</p>
+  </main>
+  <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
