--- a/es/hub/dialysis/side-effects.html
+++ b/es/hub/dialysis/side-effects.html
@@ -1,120 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Common Side Effects of Dialysis</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Efectos secundarios y seguridad en diálisis — Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
-  <body>
-    <div data-include="/includes_es/header.html"></div>
-    <main class="content" id="main">
-<div data-include="/includes_es/dialysis-subnav.html"></div>
-<h1>Dialysis Side Effects &amp; Safety</h1>
-<p>
-  Most side effects are manageable once you know the pattern and speak up early. This page covers common issues
-  during and after in-center hemodialysis and simple ways to reduce them.
-</p>
+<body>
+  <div data-include="/includes_es/header.html"></div>
+  <main class="content" id="main">
+    <div data-include="/includes_es/dialysis-subnav.html"></div>
 
-<h2>Common during or after treatment</h2>
-<ul>
-  <li><strong>Low blood pressure (light-headed, woozy, cold sweat):</strong>
+    <h1>Efectos secundarios y seguridad en diálisis</h1>
+    <p>
+      La mayoría de los efectos secundarios se pueden manejar cuando reconoces el patrón y avisas temprano.
+      Esta página cubre problemas comunes durante y después de la hemodiálisis en clínica y formas sencillas de reducirlos.
+    </p>
+
+    <h2>Comunes durante o después del tratamiento</h2>
     <ul>
-      <li><em>Now:</em> tell staff; they can lower fluid removal, recline you, give fluids, and warm you.</li>
-      <li><em>Next time:</em> arrive close to your <strong>dry weight</strong>, spread fluids/salt between runs, ask about a slower or longer session, and med timing (BP pills may need adjusting).</li>
+      <li><strong>Presión arterial baja (mareo, “cabeza ligera”, sudor frío):</strong>
+        <ul>
+          <li><em>Ahora:</em> avisa al personal; pueden bajar la extracción de líquido, recostarte, darte fluidos y abrigarte.</li>
+          <li><em>Para la próxima:</em> llega cerca de tu <strong>peso seco</strong>, reparte líquidos/sal entre sesiones, pregunta por una sesión más lenta o larga y por el horario de tus medicamentos (las pastillas para PA pueden requerir ajustes).</li>
+        </ul>
+      </li>
+
+      <li><strong>Calambres musculares (piernas, pies, manos):</strong>
+        <ul>
+          <li><em>Ahora:</em> reducir la ultrafiltración, estiramientos suaves, calor local; suero salino pequeño según política del centro.</li>
+          <li><em>Para la próxima:</em> menores aumentos de líquido, revisar peso seco y duración, calentar el brazo del acceso, preguntar por magnesio/potasio si son frecuentes.</li>
+        </ul>
+      </li>
+
+      <li><strong>Dolor de cabeza o náusea:</strong>
+        <ul>
+          <li><em>Ahora:</em> antiemético, bajar extracción de líquido, snack si está permitido.</li>
+          <li><em>Para la próxima:</em> líquidos/sal más estables entre sesiones; preguntar por ajustes del dializado, dializado frío o horario de medicación.</li>
+        </ul>
+      </li>
+
+      <li><strong>“Resaca de diálisis” (fatiga / niebla mental):</strong>
+        <ul>
+          <li><em>Ahora:</em> hidrátate según indicación, snack ligero y una ventana de descanso planificada.</li>
+          <li><em>Para la próxima:</em> considera sesiones más largas/lentas, ajustes de peso seco y manejo de anemia.</li>
+        </ul>
+      </li>
+
+      <li><strong>Piel con comezón:</strong>
+        <ul>
+          <li><em>Ahora:</em> humectante sin fragancia; evita duchas muy calientes.</li>
+          <li><em>Para la próxima:</em> pregunta por control del fósforo, captores y otras causas (sequedad, alergias).</li>
+        </ul>
+      </li>
+
+      <li><strong>Piernas inquietas o problemas para dormir:</strong>
+        <ul>
+          <li>Caminatas cortas, estiramientos de pantorrilla, limita cafeína tarde; pregunta por hierro y otros factores.</li>
+        </ul>
+      </li>
     </ul>
-  </li>
-  <li><strong>Muscle cramps (legs, feet, hands):</strong>
+
+    <h2>Agujas y problemas del acceso</h2>
     <ul>
-      <li><em>Now:</em> slow fluid removal, gentle stretches, warmth; small saline per clinic policy.</li>
-      <li><em>Next time:</em> smaller fluid gains, review dry weight and session length, warm the access arm, ask about magnesium/potassium levels if frequent.</li>
+      <li><strong>Dolor o moretón en los sitios de punción:</strong> normal al inicio; rota sitios (técnica “escalera”) o pregunta por la política de <em>buttonhole</em>.</li>
+      <li><strong>Infiltración (se mueve la aguja, hinchazón/moratón):</strong>
+        <ul>
+          <li><em>Ahora:</em> suspender el tratamiento en ese sitio; compresa fría primeras 24 h y luego calor húmedo.</li>
+          <li><em>Para la próxima:</em> revisar ángulo/técnica de punción y selección del sitio.</li>
+        </ul>
+      </li>
+      <li><strong>Sangrado tras retirar agujas:</strong> mantén presión constante; no “asomes”. Si no cede tras ~20 minutos, avisa.</li>
+      <li><strong>Cambios en fístula/injerto:</strong> pérdida del <em>frémito</em>, “silbido” nuevo, hinchazón, zonas rojas/dolorosas—repórtalo pronto.</li>
+      <li><strong>Catéteres:</strong> apósito limpio y seco, no tirar ni mojar; fiebre o escalofríos pueden indicar infección—llama ahora.</li>
     </ul>
-  </li>
-  <li><strong>Headache or nausea:</strong>
+
+    <h2>Prevención de infecciones (hábitos sencillos)</h2>
     <ul>
-      <li><em>Now:</em> anti-nausea meds, slower fluid removal, snacks if allowed.</li>
-      <li><em>Next time:</em> steadier fluid/salt between runs; ask about dialysate settings, cool dialysate, or med timing.</li>
+      <li>Lávate las manos antes del tratamiento; mantén la piel del acceso limpia y seca entre sesiones.</li>
+      <li>No rasques costras; evita ropa ajustada o presión sobre el acceso.</li>
+      <li>Reporta fiebre, escalofríos, enrojecimiento que se expande, pus, mal olor o dolor nuevo a lo largo del acceso.</li>
     </ul>
-  </li>
-  <li><strong>“Dialysis hangover” (fatigue/fog after):</strong>
+
+    <h2>Medicamentos que pueden influir en los síntomas</h2>
     <ul>
-      <li><em>Now:</em> hydrate as directed, light snack, planned rest window.</li>
-      <li><em>Next time:</em> discuss longer/slower sessions, dry-weight tweaks, and anemia management.</li>
+      <li><strong>Fármacos para la PA:</strong> el horario puede requerir cambios para evitar bajones durante la sesión.</li>
+      <li><strong>Captores de fósforo:</strong> pueden causar estreñimiento o náusea—coméntalo con tu equipo.</li>
+      <li><strong>Recetas nuevas:</strong> informa siempre al equipo de diálisis; algunos fármacos afectan la PA, el potasio o el sangrado.</li>
     </ul>
-  </li>
-  <li><strong>Itchy skin:</strong>
+
+    <h2>Cuándo llamar (no esperes)</h2>
     <ul>
-      <li><em>Now:</em> fragrance-free moisturizer; avoid hot showers.</li>
-      <li><em>Next time:</em> ask about phosphorus control, binders, and other causes (dryness, allergies).</li>
+      <li><strong>Llama al centro ahora:</strong> fiebre o escalofríos, enrojecimiento/pus nuevo en el acceso, sangrado que no cede, calambres severos, dolor en el pecho o falta de aire nueva, pérdida repentina del <em>frémito</em>.</li>
+      <li><strong>Urgencias/911:</strong> dificultad respiratoria grave, dolor torácico que no cede, confusión o desmayo.</li>
     </ul>
-  </li>
-  <li><strong>Restless legs or trouble sleeping:</strong>
-    <ul>
-      <li>Short walks, calf stretches, limit caffeine late; ask about iron and other contributors.</li>
-    </ul>
-  </li>
-</ul>
 
-<h2>Needles &amp; access issues</h2>
-<ul>
-  <li><strong>Sore or bruised sites:</strong> normal early on; rotate sites (rope-ladder) or ask about buttonhole policy.</li>
-  <li><strong>Infiltration (needle slips, swelling/bruise):</strong>
-    <ul>
-      <li><em>Now:</em> stop the treatment at that site; cold pack first 24 hours, then warm compresses.</li>
-      <li><em>Next time:</em> review needle angle/technique and site selection.</li>
-    </ul>
-  </li>
-  <li><strong>Bleeding after needles out:</strong> hold steady pressure; don’t peek. If bleeding won’t stop after ~20 minutes, tell staff.</li>
-  <li><strong>Fistula/graft changes:</strong> loss of the <em>thrill</em> vibration, new whistling sound, swelling, red/tender spots—report promptly.</li>
-  <li><strong>Catheters:</strong> keep dressing clean/dry, don’t tug or get it wet; fever or chills can mean infection—call now.</li>
-</ul>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong> ¿Cuál es mi meta actual de peso seco? ¿Cómo ajustamos tiempo/ultrafiltración para reducir calambres o PA baja? ¿Qué síntomas significan “llamar ahora” y quién responde fuera de horario?</p>
+    </div>
 
-<h2>Infection prevention (simple habits)</h2>
-<ul>
-  <li>Clean hands before treatment; keep access skin clean and dry between sessions.</li>
-  <li>Don’t scratch scabs; avoid tight clothes/pressure on the access.</li>
-  <li>Report fever, chills, spreading redness, pus, foul odor, or new pain along the access path.</li>
-</ul>
-
-<h2>Medicines that can drive symptoms</h2>
-<ul>
-  <li><strong>Blood-pressure meds:</strong> timing may need changes to avoid lows during treatment.</li>
-  <li><strong>Phosphate binders:</strong> can cause constipation or nausea—tell your team.</li>
-  <li><strong>New prescriptions:</strong> always inform the dialysis team; some drugs affect blood pressure, potassium, or bleeding.</li>
-</ul>
-
-<h2>When to call (don’t wait)</h2>
-<ul>
-  <li><strong>Call the clinic now:</strong> fever or chills, new redness/pus at access, bleeding that won’t stop, severe cramps, chest pain or new shortness of breath, sudden loss of fistula/graft <em>thrill</em>.</li>
-  <li><strong>ER/911:</strong> severe trouble breathing, chest pain that doesn’t ease, confusion, or you pass out.</li>
-</ul>
-
-<div class="callout">
-  <p><strong>Questions to ask:</strong> What’s my current dry-weight goal? How can we tweak time/ultrafiltration to reduce cramps or low BP? Which symptoms mean “call now,” and who answers after hours?</p>
-</div>
-
-<p class="disclaimer">Educational only. Your dialysis team will tailor prevention and treatment to you.</p>
-
-
-
-    </main>
-    <div data-include="/includes_es/footer.html"></div>
+    <p class="disclaimer">Contenido educativo. Tu equipo de diálisis adaptará la prevención y el tratamiento a tu situación.</p>
+  </main>
+  <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
